--- a/koreacovid.Rmd
+++ b/koreacovid.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "covid 19"
-author: "Dr K"
-date: "5/2/2020"
+author: "Carlos Fajardo"
+date: "11/26/2020"
 output:
   html_document: default
   pdf_document: default
@@ -46,17 +46,42 @@ barchartGC(~result + Sex,data=kRdata, main ="Frequency Bar Chart")
 ### this bar chart is displaying in total frequency terms our data.  Clearly there are a lot less dead people than alive people as is reflected by the sizes of the bars in the display.  
 
 
+```{r}
+barchartGC(~result + sex,data=kRdata, type="percent", main="Percent Bar Chart")
+```
 
+The percentage of females dying is less than males. 
 
+The percentage of males with the virus is less than females, but the rate of males dying is more than females.  
 
   
 ## Numerical results
 
+```{r}
+table1<- xtabs(~result + sex, data=kRdata)
+rowPerc(table1)
+```
+
+```{r}
+colPerc(table1)
+```
+Females alive is 56 percent and males alive is 44 percent.  
+Females dead is 36 percent and males dead is 64 percent.  
 
 ## Inferential results 
 
+```{r}
+chisq.test(table1)
+```
 
+```{r}
+chisqtestGC(table1)
+```
 
+```{r}
+fisher.test(table1)
+```
+The odds of dying if you're a male is 44/1411. The odds of dying if you're a female is 25/1381. The odds ratio is (44/1411)(25/1381). The odds of dying are 2.3 to 1.  
 
 ## Conclusions
 
